--- a/project11/css/style.less
+++ b/project11/css/style.less
@@ -11,8 +11,7 @@ li {
 	.g-index {
 		display: flex;
 		flex-direction: column;
-
-
+		width: 100%;
 		.g-hd {
 			display: flex;
 			align-items: center;
@@ -127,6 +126,293 @@ li {
 				}
 			}
 		}
+		.g-Bimge {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-content: center;
+			height: 650px;
+			width: 100%;
+
+
+			.img {
+				height: 650px;
+				background-size: cover;
+				background-position: 50% 50%;
+				background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2f 1.%20Lobby%20Pod%20-%20Desktop_1440x650?$pjpeg$\26jpegSize=300\26wid=1440);
+			}
+
+			.m-leftText {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-content: center;
+				position: absolute;
+				margin-left: 30px;
+				width: 80%;
+				margin-top: 220%;
+				p:nth-child(1){
+					display: none;
+				}
+				font-size: 0.4rem;
+				div {
+					display: flex;
+
+					span:nth-child(1) {
+						text-align: center;
+						display: block;
+						width: 30%;
+						height: 32px;
+						background-color: rgb(37, 156, 200);
+						border-radius: 99px;
+						line-height: 32px;
+						color: #fff;
+						cursor: pointer;
+						font-size: 0.5rem;
+					}
+
+					span:nth-child(2) {
+						text-align: center;
+						display: block;
+						width: 113.64px;
+						height: 32px;
+						line-height: 32px;
+						font-size: medium;
+						font-size: 0.4rem;
+					}
+				}
+			}
+
+			.m-bd_ft {
+				position: absolute;
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				align-content: center;
+				width: 100%;
+				height: 69px;
+				border-bottom: 1px solid rgb(230, 226, 226);
+				margin-top: 1200px;
+				span {
+					align-self: center;
+					justify-content: center;
+					font-weight: bold;
+					font-size: .5rem;
+					margin-right: 10px;
+				}
+
+				li {
+					color: skyblue;
+					font-size: .5rem;
+					align-self: center;
+					display: block;
+					&+li {
+						margin: 5px 10px;
+					}
+
+					cursor: pointer;
+
+					:hover {
+						text-decoration: underline;
+					}
+				}
+			}
+		}
+		.g-bd {
+			margin-top: 400px;
+			height: 516px;
+			width: 100%;
+			padding: 20px 20px;
+			box-sizing: border-box;
+
+			.m-three-img {
+				display: flex;
+				height: 516px;
+				flex-direction:column;
+
+				.img {
+					background-position: 100% 100%;
+					width: 447.73px;
+					display: flex;
+					flex-direction: column;
+					background-image: url(https://cc-prod.scene7.com/is/image/CCProdAuthor/Turbocharge-homepage-single-pod-cci-tablet-1002x750?$pjpeg$&jpegSize=200&wid=1002);
+					background-position: 50% 60%;
+					min-height: 500px;
+					width: 100%;
+					margin: 20px 0;
+					span,
+					p,
+					a {
+						padding: 5px 30px;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #000;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fsingle-desktop-3?$pjpeg$\26jpegSize=200\26wid=1260);
+				}
+
+			}
+
+			.m-tow-img {
+				position: relative;;
+				display: flex;
+				height: 500px;
+				margin-top: 1130px;
+				flex-direction: column;
+				.img:nth-child(1) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fpremiere.double_desktop.880x500@2x?$pjpeg$\26jpegSize=300\26wid=1760);
+					background-size: cover;
+					background-position: 50% 50%;
+					width: 100%;
+					span,
+					p,
+					a {
+						padding: 5px 20px;
+						color: #fff;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #fff;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					width: 100%;
+					background-color: #9797FC;
+					padding: 5px 30px;
+					margin-top: 40px;
+		
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+						border-bottom: 1px solid #000;
+					}
+
+					span {
+						font-size: 0.7rem;
+						font-weight: bold;
+						margin: 10px 0;
+					}
+					
+
+				}
+
+				.img {
+					min-height: 500px;
+					display: flex;
+					flex-direction: column;
+					box-sizing: border-box;
+				}
+			}
+			.m-ft-img{
+				margin-top: 560px;
+				height: 500px;
+				width: 100%;
+				.img {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fSummit-2022_During-Post_triple-desktop?$pjpeg$\26jpegSize=300\26wid=1920);
+					background-size: cover;
+					min-height: 500px;
+					background-position: 100% 50%;
+					display: flex;
+					box-sizing: border-box;
+					.m-leftText{
+						display: none;
+						align-self: center;
+						width: 45%;
+						height: 25%;
+						margin: 0 90px;
+						font-size: 0.9rem;
+						color: #fff;
+						div {
+							display: flex;
+							
+							span:nth-child(1) {
+								text-align: center;
+								display: block;
+								width: 113.64px;
+								height: 32px;
+								background-color: rgb(37, 156, 200);
+								border-radius: 99px;
+								line-height: 32px;
+								color: #fff;
+								cursor: pointer;
+								font-size: 0.7rem;
+							}
+						}
+					}
+				}
+
+			}
+			.g-ft{
+				display: flex;
+				margin: 80px 0;
+				flex-direction: column;
+				.txt {
+					display: flex;
+					flex-direction: column;
+					width: 100%;
+					p{
+						font-size: 0.75rem;
+						font-weight: bold;
+						color: rgb(112, 112, 112);
+						padding: 5px 0;
+						border-bottom: 1px solid #000;
+					}
+					span{
+						display: none;
+						font-size: 0.66rem;
+						
+						color: rgb(84, 84, 84);
+					}
+					&+.txt{
+						
+					}
+				}
+
+			}
+			.g-i {
+				
+				display: flex;
+				justify-content: center;
+				align-content: center;
+				height: 50px;
+				margin: 0 30px;
+				span {
+					align-self: center;
+					display: block;
+					margin: 0 10px;
+				}
+			}
+		}
 	}
 }
 
@@ -134,7 +420,6 @@ li {
 	.g-index {
 		display: flex;
 		flex-direction: column;
-
 		.g-hd {
 			display: flex;
 			align-items: center;
@@ -251,18 +536,33 @@ li {
 		}
 
 		.g-Bimge {
-			height: 650px;
 			display: flex;
-			align-items: center;
+			flex-direction: column;
+			justify-content: center;
+			align-content: center;
+			height: 650px;
+			width: 100%;
+
+
+			.img {
+				height: 650px;
+				background-size: cover;
+				background-position: 50% 50%;
+				background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2f 1.%20Lobby%20Pod%20-%20Desktop_1440x650?$pjpeg$\26jpegSize=300\26wid=1440);
+			}
+
 			.m-leftText {
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
 				align-content: center;
-				margin-left: 150px;
-				margin-top: 700px;
-				position: relative;
-
+				position: absolute;
+				margin-left: 50px;
+				width: 495px;
+				margin-top: 100%;
+				p:nth-child(1){
+					display: none;
+				}
 				div {
 					display: flex;
 
@@ -291,14 +591,14 @@ li {
 			}
 
 			.m-bd_ft {
-				margin-top: 900px;
+				position: absolute;
 				display: flex;
 				width: 100%;
 				justify-content: center;
 				align-content: center;
 				height: 69px;
 				border-bottom: 1px solid rgb(230, 226, 226);
-
+				margin-top: 1400px;
 				span {
 					align-self: center;
 					font-weight: bold;
@@ -323,6 +623,200 @@ li {
 				}
 			}
 		}
+		.g-bd {
+			margin-top: 400px;
+			height: 516px;
+			width: 100%;
+			padding: 30px 30px;
+			box-sizing: border-box;
+
+			.m-three-img {
+				display: flex;
+				height: 516px;
+				flex-direction:column;
+
+				.img {
+					background-position: 100% 100%;
+					width: 447.73px;
+					display: flex;
+					flex-direction: column;
+					background-image: url(https://cc-prod.scene7.com/is/image/CCProdAuthor/Turbocharge-homepage-single-pod-cci-tablet-1002x750?$pjpeg$&jpegSize=200&wid=1002);
+					background-position: 50% 60%;
+					min-height: 500px;
+					width: 100%;
+					margin: 20px 0;
+					span,
+					p,
+					a {
+						padding: 5px 30px;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #000;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fsingle-desktop-3?$pjpeg$\26jpegSize=200\26wid=1260);
+				}
+
+			}
+
+			.m-tow-img {
+				position: relative;;
+				display: flex;
+				height: 500px;
+				margin-top: 1130px;
+				flex-direction: column;
+				.img:nth-child(1) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fpremiere.double_desktop.880x500@2x?$pjpeg$\26jpegSize=300\26wid=1760);
+					background-size: cover;
+					background-position: 50% 50%;
+					width: 100%;
+					span,
+					p,
+					a {
+						padding: 5px 30px;
+						color: #fff;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #fff;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					width: 100%;
+					background-color: #9797FC;
+					padding: 5px 30px;
+					margin-top: 40px;
+		
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+						border-bottom: 1px solid #000;
+					}
+
+					span {
+						font-size: 0.7rem;
+						font-weight: bold;
+						margin: 10px 0;
+					}
+					
+
+				}
+
+				.img {
+					min-height: 500px;
+					display: flex;
+					flex-direction: column;
+					box-sizing: border-box;
+				}
+			}
+			.m-ft-img{
+				margin-top: 560px;
+				height: 500px;
+				width: 100%;
+				.img {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fSummit-2022_During-Post_triple-desktop?$pjpeg$\26jpegSize=300\26wid=1920);
+					background-size: cover;
+					min-height: 500px;
+					background-position: 100% 50%;
+					display: flex;
+					box-sizing: border-box;
+					.m-leftText{
+						align-self: center;
+						width: 45%;
+						height: 25%;
+						margin: 0 90px;
+						font-size: 0.9rem;
+						color: #fff;
+						div {
+							display: flex;
+							
+							span:nth-child(1) {
+								text-align: center;
+								display: block;
+								width: 113.64px;
+								height: 32px;
+								background-color: rgb(37, 156, 200);
+								border-radius: 99px;
+								line-height: 32px;
+								color: #fff;
+								cursor: pointer;
+								font-size: 0.7rem;
+							}
+						}
+					}
+				}
+
+			}
+			.g-ft{
+				display: flex;
+				margin: 80px 0;
+				flex-direction: column;
+				.txt {
+					display: flex;
+					flex-direction: column;
+					width: 100%;
+					p{
+						font-size: 0.75rem;
+						font-weight: bold;
+						color: rgb(112, 112, 112);
+						padding: 5px 0;
+						border-bottom: 1px solid #000;
+					}
+					span{
+						display: none;
+						font-size: 0.66rem;
+						
+						color: rgb(84, 84, 84);
+					}
+					&+.txt{
+						
+					}
+				}
+
+			}
+			.g-i {
+				
+				display: flex;
+				justify-content: center;
+				align-content: center;
+				height: 50px;
+				margin: 0 30px;
+				span {
+					align-self: center;
+					display: block;
+					margin: 0 10px;
+				}
+			}
+		}
 	}
 }
 
@@ -330,7 +824,10 @@ li {
 	.g-index {
 		display: flex;
 		flex-direction: column;
-
+		.b{
+			padding-bottom: 10px;
+			border-bottom: 1px solid gray;
+		}
 		.g-hd {
 			display: flex;
 			justify-content: space-around;
@@ -388,7 +885,6 @@ li {
 				display: flex;
 				justify-content: center;
 				align-self: center;
-				margin-left: 30px;
 				height: 100%;
 
 				:hover {
@@ -445,7 +941,15 @@ li {
 			align-content: center;
 			height: 650px;
 			width: 100%;
-			margin-top: 32px;
+
+
+			.img {
+				height: 650px;
+				background-size: cover;
+				background-position: 50% 50%;
+				background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2f 1.%20Lobby%20Pod%20-%20Desktop_1440x650?$pjpeg$\26jpegSize=300\26wid=1440);
+			}
+
 			.m-leftText {
 				display: flex;
 				flex-direction: column;
@@ -483,7 +987,6 @@ li {
 			}
 
 			.m-bd_ft {
-				margin-top: 30px;
 				display: flex;
 				width: 100%;
 				justify-content: center;
@@ -512,6 +1015,197 @@ li {
 					:hover {
 						text-decoration: underline;
 					}
+				}
+			}
+		}
+		.g-bd {
+			height: 516px;
+			width: 100%;
+			padding: 30px 30px;
+			box-sizing: border-box;
+
+			.m-three-img {
+				display: flex;
+				height: 516px;
+				justify-content: space-around;
+
+				.img {
+					background-position: 50% 60%;
+					min-height: 500px;
+					width: 447.73px;
+					background-image: url(https://cc-prod.scene7.com/is/image/CCProdAuthor/Turbocharge-homepage-single-pod-cci-desktop-630x750?$pjpeg$&jpegSize=200&wid=630);
+					display: flex;
+					flex-direction: column;
+
+					span,
+					p,
+					a {
+						padding: 5px 30px;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #000;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fsingle-desktop-3?$pjpeg$\26jpegSize=200\26wid=1260);
+				}
+
+			}
+
+			.m-tow-img {
+				display: flex;
+				height: 500px;
+				justify-content: space-around;
+				margin: 20px 0;
+
+				.img:nth-child(1) {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fpremiere.double_desktop.880x500@2x?$pjpeg$\26jpegSize=300\26wid=1760);
+					background-size: cover;
+					background-position: 50% 50%;
+					width: 934px;
+					span,
+					p,
+					a {
+						padding: 5px 30px;
+						color: #fff;
+					}
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+					}
+
+					span {
+						font-size: 0.8rem;
+					}
+
+					a {
+						color: #fff;
+						font-size: 0.6rem;
+						font-weight: bold;
+						text-decoration: none;
+					}
+				}
+
+				.img:nth-child(2) {
+					width: 447px;
+					background-color: #9797FC;
+					padding: 5px 30px;
+		
+
+					p {
+						font-weight: bold;
+						font-size: 1.1rem;
+						border-bottom: 1px solid #000;
+					}
+
+					span {
+						font-size: 0.7rem;
+						font-weight: bold;
+						margin: 10px 0;
+					}
+					
+
+				}
+
+				.img {
+					min-height: 500px;
+					display: flex;
+					flex-direction: column;
+					box-sizing: border-box;
+				}
+			}
+			.m-ft-img{
+				height: 500px;
+				width: 100%;
+				.img {
+					background-image: url(https:\2f\2fs7d1.scene7.com\2fis\2fimage\2fTitanProd\2fSummit-2022_During-Post_triple-desktop?$pjpeg$\26jpegSize=300\26wid=1920);
+					background-size: cover;
+					min-height: 500px;
+					background-position: 100% 50%;
+					display: flex;
+					box-sizing: border-box;
+					.m-leftText{
+						align-self: center;
+						width: 45%;
+						height: 25%;
+						margin: 0 90px;
+						font-size: 0.9rem;
+						color: #fff;
+						div {
+							display: flex;
+							
+							span:nth-child(1) {
+								text-align: center;
+								display: block;
+								width: 113.64px;
+								height: 32px;
+								background-color: rgb(37, 156, 200);
+								border-radius: 99px;
+								line-height: 32px;
+								color: #fff;
+								cursor: pointer;
+								font-size: 0.7rem;
+							}
+						}
+					}
+				}
+
+			}
+			.g-ft{
+				height: 430px;
+				display: flex;
+				justify-content: space-between;
+				padding: 30px;
+				margin: 80px 0;
+				.txt {
+					display: flex;
+					flex-direction: column;
+					align-content: center;
+					width: 206.31px;
+					p{
+						font-size: 0.75rem;
+						font-weight: bold;
+						color: rgb(112, 112, 112);
+					}
+					span{
+						font-size: 0.66rem;
+						margin: 10px 0;
+						color: rgb(84, 84, 84);
+					}
+					&+.txt{
+						margin-left: 40px;
+					}
+				}
+
+			}
+			.g-i {
+				border: 1px solid gray;
+				border-left: none;
+				border-right: none;
+				display: flex;
+				justify-content: center;
+				align-content: center;
+				height: 50px;
+				margin: 0 30px;
+				span {
+					align-self: center;
+					display: block;
+					margin: 0 10px;
 				}
 			}
 		}
